# BAE_SystemsMP

./: .gitignore  README.md  drone1.txt  drone2.txt  droneInput.json  main.js  package-lock.json  package.json  rootkey.csv  telemetry.json  video.webm
controllers/: drone.js  main-menu.js  save-mission.js
data/: droneInput.json  mission-name.txt  telemetry.json  video.webm
models/: new-mission.js
public/css/: all-missions.css  live-video.css  loader.css  main.css  mission-data.css  mission.css  save-mission.css  search-box-results.css
public/javascript/: all-missions.js  change-mode.js  live-video.js  main.js  mapbox-gl.js  mission-data.js  mission.js  new-mission.js  recents.js  save-mission.js  search-box-results.js
src/aStarAlgorithm/: aStarAlgorithm.sln
src/aStarAlgorithm/aStarAlgorithm/: Graph.cpp  Graph.h  State.cpp  State.h  aStarAlgorithm.cpp  aStarAlgorithm.vcxproj  aStarAlgorithm.vcxproj.filters  json.hpp  stdafx.cpp  stdafx.h
src/aStarAlgorithm/aStarAlgorithm/Debug/: vc141.idb
src/aStarAlgorithm/aStarAlgorithm/x64/Debug/: vc141.idb
src/aStarAlgorithm/x64/Release/: drone1.txt  drone2.txt
src/seniordesign/seniordesign/: CMakeLists.txt  Graph.cpp  Graph.h  State.cpp  State.h  hw03_isaacfimbres1.cpp  main.cpp
src/seniordesign/seniordesign/nlohmann/: json.hpp
views/: all-missions.html  index.html  live-video.html  loader.html  mission-data.html  mission.html  new-mission.html  recents.html  save-mission.html  search-box-results.html  user-manual.html
